# hyrox-data-scraper

./: README.md  constants.py  pyproject.toml  run.py
src/: __main__.py  athlete.py  entry.py  hyrox_event.py
src/models/: season.py
src/scraping/: seasons.py
src/utils/: path_definitions.py  utils.py
